fix: allow graceful helmrelease takeover of helmfile apps

--- a/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: cilium-helm-values
+  # Enable Hubble, Hubble Relay and Hubble UI
   values:
     hubble:
       enabled: true
