--- a/kubernetes/main/apps/kube-system/coredns/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-system/coredns/app/helm-values.yaml
@@ -59,3 +59,7 @@ topologySpreadConstraints:
     labelSelector:
       matchLabels:
         app.kubernetes.io/instance: coredns
+# Graceful Helmfile to HelmRelease takeover
+customLabels:
+  helm.toolkit.fluxcd.io/name: coredns
+  helm.toolkit.fluxcd.io/namespace: kube-system
