--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -82,3 +82,7 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
+# Graceful Helmfile to HelmRelease takeover
+commonLabels:
+  helm.toolkit.fluxcd.io/name: cilium
+  helm.toolkit.fluxcd.io/namespace: kube-system
