feat!: big time operator

--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./clickops/ks.yaml
-  - ./flux/ks.yaml
+  - ./flux-operator/ks.yaml
+  - ./github/ks.yaml
   - ./weave-gitops/ks.yaml
