--- a/kubernetes/shared/repos/helm/kustomization.yaml
+++ b/kubernetes/shared/repos/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./bitwarden.yaml
   - ./bjw-s.yaml
   - ./cilium.yaml
+  - ./controlplaneio.yaml
   - ./coredns.yaml
   - ./descheduler.yaml
   - ./external-dns.yaml
