--- a/kubernetes/main/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/main/bootstrap/apps/helmfile.yaml
@@ -1,12 +1,8 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
-# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubeVersion: v1.32.0
-
 helmDefaults:
   force: true
-  recreatePods: true
   timeout: 600
   wait: true
   waitForJobs: true
@@ -24,8 +20,8 @@ releases:
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
     version: 17.0.2
 
-  - name: &name cilium
-    namespace: &namespace kube-system
+  - name: cilium
+    namespace: kube-system
     chart: cilium/cilium
     version: 1.16.5
     values:
@@ -33,8 +29,8 @@ releases:
     needs:
       - observability/kube-prometheus-stack-crds
 
-  - name: &name coredns
-    namespace: &namespace kube-system
+  - name: coredns
+    namespace: kube-system
     chart: coredns/coredns
     version: 1.37.0
     values:
@@ -46,16 +42,35 @@ releases:
     namespace: kube-system
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.28
-    values: ["../../apps/kube-system/spegel/app/helm-values.yaml"]
-    needs:
-      - kube-system/cilium
-
-  - name: &name flux
-    namespace: &namespace flux-system
-    chart: oci://ghcr.io/fluxcd-community/charts/flux2
-    version: 2.14.1
     values:
-      - ../../apps/flux-system/flux/app/helm-values.yaml
+      - ../../apps/kube-system/spegel/app/helm-values.yaml
     needs:
       - kube-system/coredns
+
+  - name: wipe-rook
+    namespace: kube-system
+    chart: oci://ghcr.io/bjw-s/helm/app-template
+    version: 3.6.0
+    values:
+      - ./templates/wipe-rook.yaml.gotmpl
+    needs:
       - kube-system/spegel
+
+  - name: flux-operator
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    version: 0.12.0
+    values:
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+    needs:
+      - kube-system/wipe-rook
+
+  - name: flux-instance
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    version: 0.12.0
+    wait: false
+    values:
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+    needs:
+      - flux-system/flux-operator
