--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./capacitor/ks.yaml
-  - ./flux/ks.yaml
+  - ./flux-operator/ks.yaml
+  - ./github/ks.yaml
   - ./tofu-controller/ks.yaml
   - ./weave-gitops/ks.yaml
