--- a/kubernetes/main/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/main/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -10,7 +10,7 @@ instance:
   sync:
     kind: GitRepository
     name: flux-system
-    url: ssh://git@github.com/joryirving/home-ops
+    url: https://github.com/joryirving/home-ops.git
     ref: refs/heads/main
     path: kubernetes/main/flux/config
     # pullSecret: github-deploy-key
