fix: add common label for all flux components

--- a/kubernetes/utility/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/utility/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -14,6 +14,9 @@ instance:
     ref: refs/heads/main
     path: kubernetes/utility/flux/config
     # pullSecret: github-deploy-key
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: flux
   kustomize:
     patches:
       # Increase the number of workers and limits
