fix: helmfile value paths

--- a/kubernetes/utility/bootstrap/helmfile.yaml
+++ b/kubernetes/utility/bootstrap/helmfile.yaml
@@ -25,7 +25,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.5
     values:
-      - ../../apps/kube-system/cilium/app/helm-values.yaml
+      - ../appskube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
 
@@ -34,7 +34,7 @@ releases:
     chart: coredns/coredns
     version: 1.37.0
     values:
-      - ../../apps/kube-system/coredns/app/helm-values.yaml
+      - ../appskube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
 
@@ -52,7 +52,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.12.0
     values:
-      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../appsflux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
 
@@ -62,6 +62,6 @@ releases:
     version: 0.12.0
     wait: false
     values:
-      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../appsflux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
