--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -66,6 +66,7 @@ jobs:
   extract-images:
     name: Extract Images
     runs-on: ubuntu-latest
+    needs: ["changed-clusters"]
     strategy:
       matrix:
         branches: ["default", "pull"]
