--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -106,7 +106,7 @@ jobs:
         run: |
           cluster="${{ matrix.paths }}"
           cluster="${cluster/kubernetes\//}"
-          echo "cluster=${cluster^^}" >> $GITHUB_ENV
+          echo "cluster=${cluster}" >> $GITHUB_ENV
 
       - name: Gather Images
         uses: docker://ghcr.io/allenporter/flux-local:v7.0.0
