--- a/kubernetes/utility/flux/config/cluster.yaml
+++ b/kubernetes/utility/flux/config/cluster.yaml
@@ -22,6 +22,25 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-repos
+  namespace: flux-system
+spec:
+  interval: 30m
+  path: ./kubernetes/utility/flux/repos
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-settings
   namespace: flux-system
 spec:
