fix: point at consistent schema

--- a/kubernetes/main/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -30,7 +30,7 @@ spec:
       targetLabel: job
       replacement: *name
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/scrapeconfig_v1alpha1.json
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/monitoring.coreos.com/scrapeconfig_v1alpha1.json
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: ScrapeConfig
 metadata:
