fix: add output

--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -73,6 +73,7 @@ jobs:
         paths: ${{ fromJSON(needs.changed-clusters.outputs.matrix) }}
       fail-fast: false
     outputs:
+      paths: ${{ needs.changed-clusters.outputs.matrix }}
       default: ${{ steps.extract-images.outputs.default }}
       pull: ${{ steps.extract-images.outputs.pull }}
     steps:
