fix: update ks sync

--- a/.github/workflows/kustomization-sync.yaml
+++ b/.github/workflows/kustomization-sync.yaml
@@ -63,5 +63,5 @@ jobs:
           flux \
               --context ${{ matrix.cluster }} \
               --namespace flux-system \
-              reconcile ks cluster \
+              reconcile ks cluster-apps cluster-repos cluster-settings cluster-shared \
               --with-source
