--- a/kubernetes/utility/flux/config/cluster.yaml
+++ b/kubernetes/utility/flux/config/cluster.yaml
@@ -32,10 +32,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -65,6 +61,7 @@ metadata:
 spec:
   interval: 30m
   dependsOn:
+    - name: cluster-repos
     - name: cluster-shared
     - name: cluster-settings
   path: ./kubernetes/utility/apps
