chore: update grafana dashboards

--- a/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
@@ -114,13 +114,6 @@ spec:
               implementation: prometheus
     dashboards:
       default:
-        blocky:
-          # renovate: depName="blocky"
-          gnetId: 13768
-          revision: 4
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-            - { name: VAR_BLOCKY_URL, value: 'http:\/\/blocky.${SECRET_DOMAIN}' }
         cert-manager:
           # renovate: depName="Cert-manager-Kubernetes"
           gnetId: 20842
@@ -203,10 +196,10 @@ spec:
           gnetId: 19105
           revision: 6
           datasource: Prometheus
-        smart:
-          # renovate: depName="Dashboard for smartctl_exporter"
-          gnetId: 20204
-          revision: 1
+        smartctl-exporter:
+          # renovate: depName="SMARTctl Exporter Dashboard"
+          gnetId: 22604
+          revision: 2
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
         spegel:
