--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,14 +3,12 @@
   "extends": [
     ":skipStatusChecks",
     "github>joryirving/renovate-config",
-    "github>joryirving/renovate-config:autoMergeDocker",
-    "github>joryirving/renovate-config:autoMergeGithubActions",
     "github>joryirving/home-ops//.github/renovate/customManagers.json5",
     "github>joryirving/home-ops//.github/renovate/grafanaDashboards.json5",
     "github>joryirving/home-ops//.github/renovate/groups.json5",
     "github>joryirving/home-ops//.github/renovate/packageRules.json5"
   ],
-  "ignorePaths": ["**/*.sops.*", "**/.archive/**", "**/resources/**"],
+  "ignorePaths": ["**/*.sops.*", "**/resources/**"],
   "flux": {
     "fileMatch": [
       "(^|/)kubernetes/.+\\.ya?ml$"
