--- a/.github/renovate/packageRules.json5
+++ b/.github/renovate/packageRules.json5
@@ -5,12 +5,12 @@
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
       "versioning": "loose",
-      "matchPackagePatterns": ["plex", "mylar3"]
+      "matchPackagePatterns": ["plex"]
     },
     {
       "description": ["Custom versioning for mylar3"],
       "matchDatasources": ["docker"],
-      "versioning": "regex:^version-\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$",
+      "versioning": "regex:^version-v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
       "matchPackagePatterns": ["mylar3"]
     },
     {
