feat(external-dns): cut to API key instead of user/pass

--- a/kubernetes/main/apps/network/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/main/apps/network/external-dns/unifi/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name external-dns-unifi-secret
+  name: &name external-dns-unifi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,8 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        EXTERNAL_DNS_UNIFI_USER: "{{ .EXTERNAL_DNS_UNIFI_USER }}"
-        EXTERNAL_DNS_UNIFI_PASS: "{{ .EXTERNAL_DNS_UNIFI_PASS }}"
+        EXTERNAL_DNS_UNIFI_API_KEY: "{{ .EXTERNAL_DNS_UNIFI_API_KEY }}"
   dataFrom:
   - extract:
       key: unifi
