feat: update fsGroupChangePolicy

--- a/kubernetes/main/apps/downloads/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/tools/helmrelease.yaml
@@ -59,4 +59,5 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
