--- a/kubernetes/main/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/echo-server/app/helmrelease.yaml
@@ -65,6 +65,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
       topologySpreadConstraints:
         - maxSkew: 1
