--- a/kubernetes/main/apps/database/dragonfly/app/helmrelease.yaml
+++ b/kubernetes/main/apps/database/dragonfly/app/helmrelease.yaml
@@ -72,6 +72,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
       topologySpreadConstraints:
         - maxSkew: 1
