--- a/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/main/apps/network/cloudflared/app/helmrelease.yaml
@@ -74,6 +74,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
       topologySpreadConstraints:
         - maxSkew: 1
