--- a/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
@@ -53,6 +53,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
     service:
       app:
