--- a/kubernetes/utility/apps/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -58,6 +58,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
       affinity:
         nodeAffinity:
