--- a/kubernetes/utility/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/cloudflared/app/helmrelease.yaml
@@ -71,6 +71,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
       topologySpreadConstraints:
         - maxSkew: 1
