Revert "feat: cutover to api key (#3503)"
This reverts commit c8b50e6f17424ee82ef4dbdb05a994d353eb2ee6.

--- a/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name unpoller
+  name: &name unpoller-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,7 +13,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        UP_UNIFI_DEFAULT_APIKEY: "{{ .UNPOLLER_UNIFI_API_KEY }}"
+        UP_UNIFI_DEFAULT_USER: "{{ .UNPOLLER_UNIFI_USER }}"
+        UP_UNIFI_DEFAULT_PASS: "{{ .UNPOLLER_UNIFI_PASS }}"
   dataFrom:
   - extract:
       key: unifi
