--- a/kubernetes/main/apps/observability/exporters/unpoller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/exporters/unpoller/app/helmrelease.yaml
@@ -31,13 +31,13 @@ spec:
           app:
             image:
               repository: ghcr.io/unpoller/unpoller
-              tag: v2.14.0@sha256:6e9eb4a34b8d976e398511766281ec51946aafa51b5f563fca9238656eeaa118
+              tag: v2.13.1@sha256:2376aff5e18b8f9fdd618becc2ef668ce31deb4c0e74acc5bea88e6c20c23a39
             env:
               UP_UNIFI_DEFAULT_URL: https://192.168.1.1
               UP_INFLUXDB_DISABLE: true
             envFrom:
               - secretRef:
-                  name: *app
+                  name: unpoller-secret
             probes:
               liveness:
                 enabled: true
