Update var name

--- a/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        UP_UNIFI_DEFAULT_APIKEY: "{{ .UNPOLLER_UNIFI_API_KEY }}"
+        UP_UNIFI_DEFAULT_API_KEY: "{{ .UNPOLLER_UNIFI_API_KEY }}"
   dataFrom:
   - extract:
       key: unifi
