Feat/unpoller api key (#3505)
* feat: cutover to api key

* Update var name

--- a/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/exporters/unpoller/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name unpoller-secret
+  name: &name unpoller
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,8 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        UP_UNIFI_DEFAULT_USER: "{{ .UNPOLLER_UNIFI_USER }}"
-        UP_UNIFI_DEFAULT_PASS: "{{ .UNPOLLER_UNIFI_PASS }}"
+        UP_UNIFI_DEFAULT_API_KEY: "{{ .UNPOLLER_UNIFI_API_KEY }}"
   dataFrom:
   - extract:
       key: unifi
