--- a/kubernetes/main/apps/storage/kustomization.yaml
+++ b/kubernetes/main/apps/storage/kustomization.yaml
@@ -5,8 +5,17 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./csi-driver-nfs/ks.yaml
   - ./openebs/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: storage
+    unsetOnly: true
