--- a/kubernetes/main/apps/database/kustomization.yaml
+++ b/kubernetes/main/apps/database/kustomization.yaml
@@ -5,6 +5,15 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./crunchy-postgres/ks.yaml
   - ./dragonfly/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: database
+    unsetOnly: true
