--- a/kubernetes/main/apps/observability/kustomization.yaml
+++ b/kubernetes/main/apps/observability/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
@@ -15,3 +16,11 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   # Exporters
   - ./exporters
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: observability
+    unsetOnly: true
