--- a/kubernetes/main/apps/security/kustomization.yaml
+++ b/kubernetes/main/apps/security/kustomization.yaml
@@ -5,5 +5,14 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./authentik/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: security
+    unsetOnly: true
