--- a/kubernetes/shared/templates/flux/alert.yaml
+++ b/kubernetes/shared/templates/flux/alert.yaml
@@ -1,26 +1,23 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/notification.toolkit.fluxcd.io/provider_v1beta3.json
-apiVersion: notification.toolkit.fluxcd.io/v1beta3
-kind: Provider
-metadata:
-  name: alert-manager
-  namespace: kube-tools
-spec:
-  type: alertmanager
-  address: http://alertmanager-operated.observability.svc.cluster.local:9093/api/v2/alerts/
----
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/notification.toolkit.fluxcd.io/alert_v1beta3.json
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
 metadata:
   name: alert-manager
-  namespace: kube-tools
 spec:
   providerRef:
     name: alert-manager
   eventSeverity: error
   eventSources:
+    - kind: GitRepository
+      name: "*"
     - kind: HelmRelease
+      name: "*"
+    - kind: HelmRepository
+      name: "*"
+    - kind: Kustomization
+      name: "*"
+    - kind: OCIRepository
       name: "*"
   exclusionList:
     - "error.*lookup github\\.com"
