--- a/kubernetes/utility/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/utility/apps/external-secrets/kustomization.yaml
@@ -5,6 +5,15 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./external-secrets/ks.yaml
   - ./onepassword-connect/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: external-secrets
+    unsetOnly: true
