--- a/kubernetes/utility/apps/flux-system/kustomization.yaml
+++ b/kubernetes/utility/apps/flux-system/kustomization.yaml
@@ -5,8 +5,17 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./capacitor/ks.yaml
   - ./flux-operator/ks.yaml
   - ./tofu-controller/ks.yaml
   - ./weave-gitops/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: flux-system
+    unsetOnly: true
