--- a/kubernetes/utility/apps/home-automation/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/kustomization.yaml
@@ -5,8 +5,17 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
   - ./rtlamr2mqtt/ks.yaml
   - ./zigbee2mqtt/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: home-automation
+    unsetOnly: true
