--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -5,9 +5,18 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
   # - ./powertune/ks.yaml
   - ./reloader/ks.yaml
   - ./system-upgrade-controller/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: kube-tools
+    unsetOnly: true
