--- a/kubernetes/utility/apps/observability/kustomization.yaml
+++ b/kubernetes/utility/apps/observability/kustomization.yaml
@@ -5,9 +5,18 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./network-ups-tools/ks.yaml
   - ./smartctl-exporter/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: observability
+    unsetOnly: true
