--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -5,9 +5,18 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
   - ./meshcentral/ks.yaml
   - ./rss-forwarder/ks.yaml
   - ./thelounge/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: self-hosted
+    unsetOnly: true
