--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -5,7 +5,16 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ../../../shared/templates/flux/
   # Flux-Kustomizations
   - ./local-path-provisioner/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: storage
+    unsetOnly: true
