chore: update runner names

--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -10,7 +10,7 @@
   jobs:
     sync:
       name: Deployment Restart
-      runs-on: ["gha-runner-scale-set"]
+      runs-on: ["home-ops-runner"]
       strategy:
         matrix:
           cluster: ["main", "utility"]
