--- a/.github/workflows/terraform-diff.yaml
+++ b/.github/workflows/terraform-diff.yaml
@@ -58,7 +58,7 @@ jobs:
 
   sync:
     name: Terraform Diff
-    runs-on: ["gha-runner-scale-set"] #Backend is stored on local minio with no external ingress
+    runs-on: ["home-ops-runner"] #Backend is stored on local minio with no external ingress
     needs: ["changed-terraform"]
     strategy:
       matrix:
