feat: refactor network folder

--- a/kubernetes/main/apps/network/external/echo-server/ks.yaml
+++ b/kubernetes/main/apps/network/external/echo-server/ks.yaml
@@ -3,16 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app cloudflared
+  name: &app echo-server
   namespace: flux-system
 spec:
   targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: external-secrets-stores
-  path: ./kubernetes/main/apps/network/cloudflared/app
+  path: ./kubernetes/main/apps/network/external/echo-server/app
   prune: true
   sourceRef:
     kind: GitRepository
