feat: migrate lat/long to 1pass

--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -20,6 +20,8 @@ spec:
         HOMEPAGE_VAR_PORTAINER_TOKEN: "{{ .PORTAINER_TOKEN }}"
         HOMEPAGE_VAR_UNIFI_USERNAME: "{{ .HOMEPAGE_UNIFI_USER }}"
         HOMEPAGE_VAR_UNIFI_PASSWORD: "{{ .HOMEPAGE_UNIFI_PASS }}"
+        HOMEPAGE_VAR_LATITUDE: "{{. HOMEPAGE_VAR_LATITUDE }}"
+        HOMEPAGE_VAR_LONGITUDE: "{{ .HOMEPAGE_VAR_LONGITUDE }}"
         ## Default
         HOMEPAGE_VAR_HASS_TOKEN: "{{ .HASS_TOKEN }}"
         HOMEPAGE_VAR_PAPERLESS_TOKEN: "{{ .HOMEPAGE_VAR_PAPERLESS_TOKEN }}"
@@ -64,6 +66,8 @@ spec:
       key: healthcheck
   - extract:
       key: home-assistant
+  - extract:
+      key: homepage
   - extract:
       key: jellyseerr
   - extract:
