--- a/kubernetes/main/apps/self-hosted/homepage/app/configmap.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/configmap.yaml
@@ -211,8 +211,8 @@ data:
           showLabel: true
     - openmeteo:
         label: Home
-        latitude: ${LATITUDE}
-        longitude: ${LONGITUDE}
+        latitude: {{HOMEPAGE_VAR_LATITUDE}}
+        longitude: {{HOMEPAGE_VAR_LONGITUDE}}
         units: metric
         cache: 5
     - datetime:
