Revert "Revert "feat: test GHA runner in utility cluster""
This reverts commit ea0cb847e89ba3219d47f5a609f831b53f8ef7df.

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -87,8 +87,8 @@ tasks:
       - helm -n actions-runner-system uninstall home-ops-runner
       - helm -n actions-runner-system uninstall actions-runner-controller
       - sleep 5
-      - flux -n actions-runner-system reconcile hr actions-runner-controller
-      - flux -n actions-runner-system reconcile hr home-ops-runner
+      - flux -n flux-system reconcile ks actions-runner-controller
+      - flux -n flux-system reconcile ks actions-runner-controller-runners
     requires:
       vars: [CLUSTER]
     preconditions:
