feat: add scale set under different name

--- a/kubernetes/utility/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
+++ b/kubernetes/utility/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &name home-ops-runner
+  name: &name home-ops-runner-utility
 spec:
   interval: 30m
   chart:
