--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -23,7 +23,7 @@ on:
 jobs:
   sync:
     name: Helm Repository Sync
-    runs-on: [self-hosted]
+    runs-on: [home-ops-runner]
     steps:
       - name: Configure 1password
         uses: 1password/load-secrets-action/configure@v2
