--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -140,7 +140,7 @@ jobs:
   pre-pull-images:
     if: ${{ needs.compare-images.outputs.images != '[]' }}
     name: Pre-pull Images
-    runs-on: [home-ops-runner]
+    runs-on: [home-ops-runner, home-ops-runner-utility]
     needs: ["compare-images", "changed-clusters"]
     strategy:
       matrix:
