--- a/.github/workflows/terraform-diff.yaml
+++ b/.github/workflows/terraform-diff.yaml
@@ -58,7 +58,7 @@ jobs:
 
   sync:
     name: Terraform Diff
-    runs-on: [home-ops-runner] #Backend is stored on local minio with no external ingress
+    runs-on: [home-ops-runner, home-ops-runner-utility] #Backend is stored on local minio with no external ingress
     needs: ["changed-terraform"]
     strategy:
       matrix:
