feat: two sets enter, one leaves

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -86,11 +86,11 @@ tasks:
     cmds:
       - helm -n actions-runner-system uninstall home-ops-runner
       - helm -n actions-runner-system uninstall actions-runner-controller
-      - flux delete -n actions-runner-system helmrelease home-ops-runner
-      - flux delete -n actions-runner-system helmrelease actions-runner-controller
+      - flux delete -s -n actions-runner-system helmrelease home-ops-runner
+      - flux delete -s -n actions-runner-system helmrelease actions-runner-controller
       - sleep 5
-      # - flux -n flux-system reconcile ks actions-runner-controller
-      # - flux -n flux-system reconcile ks actions-runner-controller-runners
+      - flux -n flux-system reconcile ks actions-runner-controller
+      - flux -n flux-system reconcile ks actions-runner-controller-runners
     requires:
       vars: [CLUSTER]
     preconditions:
