--- a/kubernetes/utility/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
+++ b/kubernetes/utility/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &name home-ops-runner-utility
+  name: home-ops-runner
 spec:
   interval: 30m
   chart:
@@ -35,7 +35,7 @@ spec:
   values:
     githubConfigUrl: https://github.com/joryirving/home-ops
     minRunners: 1
-    maxRunners: 12
+    maxRunners: 4
     containerMode:
       type: kubernetes
       kubernetesModeWorkVolumeClaim:
