--- a/kubernetes/utility/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/utility/apps/actions-runner-system/kustomization.yaml
@@ -2,12 +2,12 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+resources: []
   # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  - ../../../shared/templates/alerts
+  # - ./namespace.yaml
+  # - ../../../shared/templates/alerts
   # Flux-Kustomizations
-  - ./actions-runner-controller/ks.yaml
+  # - ./actions-runner-controller/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
