too lazy to comment out

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -84,10 +84,10 @@ tasks:
   upgrade-arc:
     desc: Upgrade the ARC [CLUSTER=main]
     cmds:
-      - helm -n actions-runner-system uninstall home-ops-runner
-      - helm -n actions-runner-system uninstall actions-runner-controller
-      - flux delete -s -n actions-runner-system helmrelease home-ops-runner
-      - flux delete -s -n actions-runner-system helmrelease actions-runner-controller
+      - helm -n actions-runner-system uninstall home-ops-runner || true
+      - helm -n actions-runner-system uninstall actions-runner-controller || true
+      - flux delete -s -n actions-runner-system helmrelease home-ops-runner || true
+      - flux delete -s -n actions-runner-system helmrelease actions-runner-controller || true
       - sleep 5
       - flux -n flux-system reconcile ks actions-runner-controller
       - flux -n flux-system reconcile ks actions-runner-controller-runners
