Fix spegel location
You have it in kube-tools

--- a/kubernetes/main/bootstrap/helmfile.yaml
+++ b/kubernetes/main/bootstrap/helmfile.yaml
@@ -39,11 +39,11 @@ releases:
       - kube-system/cilium
 
   - name: spegel
-    namespace: kube-system
+    namespace: kube-tools
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.29
     values:
-      - ../apps/kube-system/spegel/app/helm-values.yaml
+      - ../apps/kube-tools/spegel/app/helm-values.yaml
     needs:
       - kube-system/coredns
 
