feat(talos): @bjw-s says Enable MutatingAdmissionPolicy

--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -82,6 +82,14 @@ patches:
           validSubnets:
             - "10.69.1.0/24"
 
+  # Enable MutatingAdmissionPolicy
+  - |-
+    cluster:
+      apiServer:
+        extraArgs:
+          runtime-config: admissionregistration.k8s.io/v1alpha1=true
+          feature-gates: MutatingAdmissionPolicy=true
+
   # Custom sysctl settings
   - |-
     machine:
