feat(volsync): rely on MutatingAdmissionPolicy for jitter

--- a/kubernetes/shared/templates/volsync/minio.yaml
+++ b/kubernetes/shared/templates/volsync/minio.yaml
@@ -57,7 +57,7 @@ metadata:
 spec:
   sourcePVC: "${CLAIM:-${APP}}"
   trigger:
-    schedule: "${VOLSYNC_MINIO_SCHEDULE:-0} * * * *"
+    schedule: "0 * * * *"
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 10
