--- a/kubernetes/shared/templates/volsync/r2.yaml
+++ b/kubernetes/shared/templates/volsync/r2.yaml
@@ -31,7 +31,7 @@ metadata:
 spec:
   sourcePVC: "${CLAIM:-${APP}}"
   trigger:
-    schedule: "${VOLSYNC_R2_SCHEDULE:-15} 0 * * *"
+    schedule: "0 0 * * *"
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 7
