feat: add runner

--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/helmrelease.yaml
@@ -23,6 +23,10 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    runner:
+      image:
+        repository: ghcr.io/joryirving/opentofu-runner
+        tag: 1.9.0@sha256:4b84975e802ded0b4241783ed164bdf302b51c37a1391c7e7d477349ee0b3c44
     metrics:
       enabled: true
       serviceMonitor:
