feat: update prune settings

--- a/kubernetes/main/apps/network/nginx/ks.yaml
+++ b/kubernetes/main/apps/network/nginx/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: cert-manager-issuers
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/network/nginx/certificates
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
