--- a/kubernetes/utility/apps/network/external-dns/ks.yaml
+++ b/kubernetes/utility/apps/network/external-dns/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/utility/apps/network/external-dns/cloudflare
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -35,7 +35,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/utility/apps/network/external-dns/unifi
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
