feat: move network/certificates to cert-manager/tls

--- a/kubernetes/utility/apps/cert-manager/cert-manager/issuers/clusterissuer.yaml
+++ b/kubernetes/utility/apps/cert-manager/cert-manager/issuers/clusterissuer.yaml
@@ -13,9 +13,10 @@ spec:
     solvers:
       - dns01:
           cloudflare:
+            email: "${SECRET_ACME_EMAIL}"
             apiTokenSecretRef:
-              name: cert-manager-secret
-              key: api-token
+              name: cloudflare-secret
+              key: CLOUDFLARE_API_KEY
         selector:
           dnsZones: ["${SECRET_DOMAIN}"]
 ---
@@ -33,8 +34,9 @@ spec:
     solvers:
       - dns01:
           cloudflare:
+            email: "${SECRET_ACME_EMAIL}"
             apiTokenSecretRef:
-              name: cert-manager-secret
-              key: api-token
+              name: cloudflare-secret
+              key: CLOUDFLARE_API_KEY
         selector:
           dnsZones: ["${SECRET_DOMAIN}"]
