--- a/kubernetes/utility/apps/cert-manager/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/utility/apps/cert-manager/cert-manager/issuers/kustomization.yaml
@@ -3,6 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./secret.sops.yaml
-  - ./issuers.yaml
-  - ./self-signed.yaml
+  - ./clusterissuer.yaml
+  - ./externalsecret.yaml
