--- a/kubernetes/utility/apps/network/nginx/external/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/nginx/external/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: network/${SECRET_DOMAIN}-tls
+        default-ssl-certificate: cert-manager/${SECRET_DOMAIN}-tls
         publish-status-address: *hostname
       terminationGracePeriodSeconds: 120
       publishService:
