--- a/kubernetes/main/apps/network/kustomization.yaml
+++ b/kubernetes/main/apps/network/kustomization.yaml
@@ -7,10 +7,8 @@ resources:
   - ./namespace.yaml
   - ../../../shared/templates/alerts
   # Flux-Kustomizations
-  - ./cloudflared/ks.yaml
-  - ./echo-server/ks.yaml
-  - ./external-dns/ks.yaml
-  - ./nginx/ks.yaml
+  - ./external/ks.yaml
+  - ./internal/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
