feat: move cloudflared tunnel ID out of secrets

--- a/kubernetes/main/apps/network/external/cloudflared/dnsendpoint.yaml
+++ b/kubernetes/main/apps/network/external/cloudflared/dnsendpoint.yaml
@@ -8,4 +8,4 @@ spec:
   endpoints:
     - dnsName: "external.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets: ["85be482d-5cf9-4ee5-a9a0-c489e3dd6188.cfargotunnel.com"]
