--- a/kubernetes/main/apps/network/external/cloudflared/externalsecret.yaml
+++ b/kubernetes/main/apps/network/external/cloudflared/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
             "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "${CLOUDFLARE_TUNNEL_ID}"
+            "TunnelID": "85be482d-5cf9-4ee5-a9a0-c489e3dd6188"
           }
   dataFrom:
   - extract:
