--- a/kubernetes/utility/apps/network/external/cloudflared/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/external/cloudflared/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
             "TunnelSecret": "{{ .UTILITY_CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "${CLOUDFLARE_TUNNEL_ID}"
+            "TunnelID": "4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba"
           }
   dataFrom:
   - extract:
