--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         ## Non Cluster resources
         HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID: "{{ .CLOUDFLARE_ACCOUNT_TAG }}"
-        HOMEPAGE_VAR_CLOUDFLARED_TUNNELID: "${CLOUDFLARE_TUNNEL_ID}"
+        HOMEPAGE_VAR_CLOUDFLARED_TUNNELID: "{{ .MAIN_CLOUDFLARE_TUNNEL_ID }}"
         HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN: "{{ .CLOUDFLARE_API_KEY }}"
         HOMEPAGE_VAR_PORTAINER_TOKEN: "{{ .PORTAINER_TOKEN }}"
         HOMEPAGE_VAR_UNIFI_USERNAME: "{{ .HOMEPAGE_UNIFI_USER }}"
