--- a/kubernetes/utility/apps/network/external/cloudflared/dnsendpoint.yaml
+++ b/kubernetes/utility/apps/network/external/cloudflared/dnsendpoint.yaml
@@ -8,4 +8,4 @@ spec:
   endpoints:
     - dnsName: "external-utility.${SECRET_DOMAIN}"
       recordType: CNAME
-      targets: ["${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets: ["4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba.cfargotunnel.com"]
